<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/base_grey"
>
    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
                android:id="@+id/changingsettings_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">
            <TextView
                    android:id="@+id/changingsettings_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:layout_gravity="center"
                    android:text="@string/changingsettings_title"
            />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
            android:id="@+id/tmp_layout"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:clickable="true"
            style="@style/item_margin"
    >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                style="@style/item_text_size"
                android:textColor="@color/base_white"
                android:text="@string/tmp_setting"
        />
        <TextView
                android:id="@+id/tmpmetric_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/item_text_size"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:textColor="@color/base_white"
                android:text="@string/temperature_metric"
        />

    </RelativeLayout>
    <View android:layout_width="match_parent"
          android:layout_height="0.5dp"
          android:layout_marginLeft="@dimen/divider_margin"
          android:layout_marginRight="@dimen/divider_margin"
          android:background="@color/base_white"/>

    <RelativeLayout
            android:id="@+id/isupdate_layout"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:clickable="true"
            style="@style/item_margin">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/item_text_size"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textColor="@color/base_white"
                android:text="@string/isupdate_setting"
        />
        <Switch
                android:id="@+id/update_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
        />
    </RelativeLayout>
    <View android:layout_width="match_parent"
          android:layout_height="0.5dp"
          android:layout_marginLeft="@dimen/divider_margin"
          android:layout_marginRight="@dimen/divider_margin"
          android:background="@color/base_white"/>
    <RelativeLayout
            android:id="@+id/updatetime_layout"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:clickable="true"
            style="@style/item_margin">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/item_text_size"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textColor="@color/base_white"
                android:text="@string/updatetime_setting"
        />
        <TextView
                android:id="@+id/updatetime_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/item_text_size"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:textColor="@color/base_white"
                android:text="@string/default_hour"
        />
    </RelativeLayout>
    <View android:layout_width="match_parent"
          android:layout_height="0.5dp" android:layout_alignParentBottom="true"
          android:layout_marginLeft="@dimen/divider_margin"
          android:layout_marginRight="@dimen/divider_margin"
          android:background="@color/base_white"/>


</LinearLayout>